@@ -760,6 +760,7 @@ etc/netconfig
 etc/networks
 etc/protocols
 #etc/rc.firewall6
+etc/regdomain.xml
 etc/remote
 etc/rpc
 
