@@ -53,7 +53,7 @@ $g = array(
 	"debug" => false,
 	"latest_config" => "1.8",
 	"nopccard_platforms" => array("wrap", "net48xx"),
-	"wireless_regex" => "/^(ndis|wi|ath|an|ral|ural|wai|iwi|awi|wlan|ipw|wpi|rum|arl|zyd)/",
+	"wireless_regex" => "/^(ndis|wlan|an|ath|bwi|bwn|ipw|iwi|iwn|malo|mwl|ral|wi|wpi|rsu|rum|run|uath|upgt|ural|urtw|urtwn|usie|zyd)/",
 	"default_passwd" => "nas4free",
 	"default_ip" => "192.168.1.250"
 );
