@@ -89,6 +89,7 @@ if (isset($_GET['act']) && $_GET['act'] === "del") {
 	<td class="tabnavtbl">
 		<ul id="tabnav">
 			<li class="tabinact"><a href="interfaces_assign.php"><span><?=gettext("Management");?></span></a></li>
+			<li class="tabinact"><a href="interfaces_wlan.php"><span><?=gettext("WLAN");?></span></a></li>
 			<li class="tabinact"><a href="interfaces_vlan.php"><span><?=gettext("VLAN");?></span></a></li>
 			<li class="tabinact"><a href="interfaces_lagg.php"><span><?=gettext("LAGG");?></span></a></li>
 			<li class="tabact"><a href="interfaces_bridge.php" title="<?=gettext("Reload page");?>"><span><?=gettext("Bridge");?></span></a></li>
